# gh_autograder_fetcher

./: .env.example  .gitattributes  .gitignore  CUSTOM_AUTOGRADER_PROPOSAL.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  export.rs  fetcher.rs  main.rs
src/api/: classroom.rs  github.rs  mod.rs
src/models/: mod.rs
src/parser/: mod.rs
src/ui/: app.rs  mod.rs  render.rs  state.rs
